# trpl

./: .gitignore  Cargo.toml  Readme.md
adder/: Cargo.toml
adder/src/: lib.rs
adv_funcs/: Cargo.toml
adv_funcs/src/: main.rs
adv_traits/src/: main.rs
adv_types/: Cargo.toml
adv_types/src/: main.rs
boxes/: Cargo.toml
boxes/src/: main.rs
branches/: Cargo.toml
branches/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
collections/: Cargo.toml
collections/src/: map.rs  string.rs  vector.rs
common-concepts/: Cargo.toml
derefs/: Cargo.toml
derefs/src/: main.rs
drops/: Cargo.toml
drops/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
errors/: Cargo.toml
functions/: Cargo.toml
functions/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_macro/: Cargo.toml
hello_macro/hello_macro_derive/: Cargo.toml
hello_macro/src/: lib.rs
interior-mutability/: Cargo.toml
interior-mutability/src/: lib.rs  main.rs
lifetime/: Cargo.toml
lifetime/src/: main.rs
macros/src/: lib.rs  main.rs
message-passing/: Cargo.toml
message-passing/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
multi_thread_server/: Cargo.toml
multi_thread_server/src/: lib.rs  main.rs
oop/: Cargo.toml
oop/src/: lib.rs  main.rs
ownership/: Cargo.toml
packages_and_crates/: Readme.md
patterns/: Cargo.toml
rcs/: Cargo.toml
reference-cycles/: Cargo.toml
references_and_borrowing/: Cargo.toml
shared-state/: Cargo.toml
single_thread_server/: Cargo.toml
slices/: Cargo.toml
src/: collections.rs  control_flow.rs  enum.rs  error.rs  function.rs  generic.rs  lib.rs  main.rs  map.rs  ownership.rs  ref_borrow.rs  slices.rs  string.rs  struct.rs  uselib.rs  variable.rs
structs/: Cargo.toml
threads/: Cargo.toml
traits/: Cargo.toml
unsafe/: Cargo.toml
uselib/: Cargo.toml
variables/: Cargo.toml
(+25 files in other folders)
