[package]
name = "collections"
version = "0.1.0"
authors = ["zhujie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vector"
path = "src/vector.rs"

[[bin]]
name = "string"
path = "src/string.rs"

[[bin]]
name = "map"
path = "src/map.rs"

[dependencies]
